--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visual Studio Code Keybord Shortcuts</title>
+    <meta
+      name="twitter:image:src"
+      content="https://repository-images.githubusercontent.com/183981860/42284300-6a7a-11e9-8801-572f40cc9296"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Visual Studio Code Keybord Shortcuts" />
+    <meta
+      property="og:image"
+      content="https://repository-images.githubusercontent.com/183981860/42284300-6a7a-11e9-8801-572f40cc9296"
+    />
+    <meta property="og:site_name" content="honai.github.io" />
+    <meta property="og:type" content="object" />
+    <meta property="og:title" content="Visual Studio Code Keybord Shortcuts" />
+    <meta
+      property="og:url"
+      content="https://honai.github.io/vscode-shortcuts-wallpaper"
+    />
     <style>
       html {
         font-size: 0.8vw;
