--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visual Studio Code Keybord Shortcuts</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta
       name="twitter:image:src"
       content="https://repository-images.githubusercontent.com/183981860/42284300-6a7a-11e9-8801-572f40cc9296"
