--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visual Studio Code Keybord Shortcuts</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link
+      rel="icon"
+      href="https://honai.github.io/favicon.ico"
+      type="image/x-icon"
+    />
     <meta
       name="twitter:image:src"
       content="https://repository-images.githubusercontent.com/183981860/42284300-6a7a-11e9-8801-572f40cc9296"
@@ -686,7 +690,6 @@
         var viewHeight = window.innerHeight;
         var html = document.getElementsByTagName('html')[0];
         var fontSize = Math.min(viewWidth * 0.008, viewHeight * 0.012);
-        console.log(viewWidth);
         html.style.fontSize = String(fontSize) + 'px';
       }
       setSize();
