firefoxで描画されないバグ修正

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         display: flex;
         justify-content: space-around;
         margin: auto;
+        flex: 1 1 100%;
       }
       .column {
         width: 30%;
