fix F12 and Shift+F12

--- a/index.html
+++ b/index.html
@@ -422,7 +422,11 @@
             </tr>
             <tr>
               <th>Ctrl+K Ctrl+F</th>
-              <td>Format selection F12 Go to Definition</td>
+              <td>Format selection</td>
+            </tr>
+              <tr>
+              <th>F12</th>
+              <td>Go to Definition</td>
             </tr>
             <tr>
               <th>Alt+F12</th>
@@ -435,6 +439,10 @@
             <tr>
               <th>Ctrl+.</th>
               <td>Quick Fix Shift+F12 Show References</td>
+            </tr>
+            <tr>
+              <th>Shift+F12</th>
+              <td>Show References</td>
             </tr>
             <tr>
               <th>F2</th>
